[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.8.6"
thiserror = "1.0.24"
arrayref = "0.3.6"
spl-token = { version = "3.1.1", feature = ["no-entrypoint"] }

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.8.6"
solana-sdk = "=1.8.6"
solana-validator = "=1.8.6"

[lib]
crate-type = ["cdylib", "lib"]
